# uRDFLIB

./: CMakeLists.txt  Doxyfile  README.md  library.json
examples/Arduino/: main.cpp
examples/unix/: main.c
src/: urdflib.c  urdflib.h
test/: test.c
test/data/: empty_graph.diag  empty_named_graph.diag  one_triple.diag  tree.diag  triples_with_literals.diag  two_triples.diag
